[add] thumbnailに対応
