# domain/src/model/article.rs
@@ -8,6 +8,7 @@ pub struct ListArticle {
     pub title: String,
     pub subtitle: String,
     pub tags: Vec<String>,
+    pub thumbnail: String,
     pub is_public: bool,
     pub created_at: DateTime<Utc>,
     pub updated_at: Option<DateTime<Utc>>,
@@ -19,6 +20,7 @@ pub struct PostArticle {
     pub title: String,
     pub subtitle: String,
     pub body: String,
+    pub thumbnail: String,
     pub tags: Vec<String>,
     pub is_public: bool,
     pub created_at: DateTime<Utc>,
@@ -30,6 +32,7 @@ pub struct GetArticle {
     pub title: String,
     pub subtitle: String,
     pub body: String,
+    pub thumbnail: String,
     pub tags: Vec<String>,
     pub is_public: bool,
     pub created_at: DateTime<Utc>,
@@ -41,6 +44,7 @@ pub struct PutArticle {
     pub title: String,
     pub subtitle: String,
     pub body: String,
+    pub thumbnail: String,
     pub tags: Vec<String>,
     pub is_public: bool,
     pub updated_at: Option<DateTime<Utc>>,
@@ -51,6 +55,7 @@ impl PostArticle {
         title_: String,
         subtitle_: String,
         body_: String,
+        thumbnail_: String,
         tags_: Vec<String>,
         is_public_: bool,
     ) -> Self {
@@ -59,6 +64,7 @@ impl PostArticle {
             title: title_,
             subtitle: subtitle_,
             body: body_,
+            thumbnail: thumbnail_,
             tags: tags_,
             is_public: is_public_,
             created_at: Utc::now(),
@@ -72,6 +78,7 @@ impl PutArticle {
         title_: String,
         subtitle_: String,
         body_: String,
+        thumbnail_: String,
         tags_: Vec<String>,
         is_public_: bool,
     ) -> Self {
@@ -79,6 +86,7 @@ impl PutArticle {
             title: title_,
             subtitle: subtitle_,
             body: body_,
+            thumbnail: thumbnail_,
             tags: tags_,
             is_public: is_public_,
             updated_at: Some(Utc::now()),
