# interface/src/handler/list_article.rs
@@ -12,6 +12,7 @@ pub struct ListArticle {
     id: String,
     title: String,
     subtitle: String,
+    thumbnail: String,
     tags: Vec<String>,
     is_public: bool,
     created_at: DateTime<Utc>,
@@ -42,6 +43,7 @@ pub async fn list_article(
                     id: a.id.clone(),
                     title: a.title.clone(),
                     subtitle: a.subtitle.clone(),
+                    thumbnail: a.thumbnail.clone(),
                     tags: a.tags.clone(),
                     is_public: a.is_public,
                     created_at: a.created_at,
