# interface/src/handler/post_article.rs
@@ -11,6 +11,7 @@ pub struct PostArticleRequest {
     title: String,
     subtitle: String,
     body: String,
+    thumbnail: String,
     tags: Vec<String>,
     is_public: bool,
 }
@@ -39,6 +40,7 @@ pub async fn post_article(
         payload.title,
         payload.subtitle,
         payload.body,
+        payload.thumbnail,
         payload.tags,
         payload.is_public,
     );
