# interface/src/handler/read_article.rs
@@ -13,6 +13,7 @@ pub struct ReadArticleResponse {
     title: String,
     subtitle: String,
     body: String,
+    thumbnail: String,
     tags: Vec<String>,
     is_public: bool,
     created_at: DateTime<Utc>,
@@ -35,6 +36,7 @@ pub async fn read_article(
                 title: article.title,
                 subtitle: article.subtitle,
                 body: article.body,
+                thumbnail: article.thumbnail,
                 tags: article.tags,
                 is_public: article.is_public,
                 created_at: article.created_at,
