# swagger/OpenApi.yml
@@ -128,6 +128,8 @@ components:
           type: string
         body:
           type: string
+        thumbnail:
+          type: string
         tags:
           type: array
           items:
@@ -143,6 +145,8 @@ components:
           type: string
         body:
           type: string
+        thumbnail:
+          type: string
         tags:
           type: array
           items:
@@ -152,7 +156,7 @@ components:
     LoginAsOwner:
       type: object
       properties:
-        name:
+        owner_id:
           type: string
         passwd:
           type: string
